[package]
name = "dano"
version = "0.6.0"
edition = "2021"
keywords = ["checksum", "verify", "media", "cli-utility", "storage"]
description = "A CLI tool for generating checksums of media bitstreams"
repository = "https://github.com/kimono-koans/dano"
readme = "README.md"
categories = [ "command-line-utilities",  "os" ]
license = "MPL-2.0"
documentation = "https://github.com/kimono-koans/dano/blob/master/README.md"

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
debug = true
opt-level = "z"  # Aggressively optimize for size.

[dependencies]
clap = { version = "3.2.8", features = ["cargo"] }
rayon = { version = "1.6.1", default-features = false }
which = { version = "4.3.0", default-features = false }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = { version = "1.0.91" } # need alloc or std
itertools = { version = "0.10.5" } # use_std, use_alloc for into_group_map_by()
crossbeam = { version = "0.8.2" } # default features includes channels
num_cpus = { version = "1.14", default-features = false }
xattr = { version = "1.0.0", default-features = false }
rug = { version = "1.18.0", features = ["serde"]  }


[package.metadata.deb]
maintainer = "kimono koans <https://github.com/kimono-koans/>"
copyright = "2022, Robert Swinford <robert.swinford<...at...>gmail.com>"
extended-description = """\
dano is a wrapper for ffmpeg that checksums the internal file streams of ffmpeg compatible media files, \
and stores them in a format which can be used to verify such checksums later.  \
This is handy, because, should you choose to change metadata tags, or change file names, \
the media checksums should remain the same.
"""
license-file = ["LICENSE", "4"]
depends = "ffmpeg (>=4.2.7), $auto"
suggests = "flac (>=1.3.3)"
section = "utility"
priority = "optional"
assets = [
    ["target/release/dano", "usr/bin/", "755"],
    ["dano.1", "usr/share/man/man1/", "644"],
    ["README.md", "usr/share/doc/dano/README", "644"],
    ["LICENSE", "usr/share/doc/dano/LICENSE", "644"],
    ["third_party/LICENSES_THIRD_PARTY.html", "usr/share/doc/dano/LICENSES_THIRD_PARTY.html", "644"],
]